use local version of fabric-loader